<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08">

        <Chronometer
            android:id="@+id/stopwatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingRight="0dp"
            android:paddingBottom="5dp"
            android:text="@string/time_hr"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="."
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/time_milli1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time_milli"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/time_milli2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time_milli"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="48sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="92dp"
        android:layout_weight="1"
        android:background="@drawable/btn_round"

        android:text="@string/btn1"

        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_weight="1"

        android:background="@drawable/btn_round"
        android:text="@string/btn2"
        android:textAlignment="center"

        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/lap_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/str_main"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/scroll"
        app:layout_constraintStart_toStartOf="@+id/scroll"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lap_info"
        app:layout_constraintVertical_bias="0.079">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="10dp"
                android:lineSpacingExtra="24sp"
                android:text="@string/str_laps"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/scroll"
        app:layout_constraintEnd_toEndOf="@+id/scroll"
        app:layout_constraintStart_toStartOf="@+id/scroll"
        app:layout_constraintTop_toBottomOf="@+id/lap_info" 
        />

    <LinearLayout
        android:id="@+id/laprecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Chronometer
            android:id="@+id/stopwatch_lap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:paddingLeft="5sp"

            android:text="@string/time_hr"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="22sp" />


        <TextView
        android:id="@+id/lap_dot"
        android:paddingLeft="5sp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="."
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="22sp" />

        <TextView
            android:id="@+id/time_lap_milli1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time_milli"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="22sp" />
        <TextView
            android:id="@+id/time_lap_milli2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time_milli"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="22sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>